<resources>
    <string name="app_name">Сила \n Воскресения</string>
    <string name="test_title">God is a healer and he will heal you</string>

    <string name="title_activity_main">Сила Воскресения</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Выдти</string>
    <string name="action_blogs">Блоги</string>
    <string name="sila_voscresenye">Сила Восвресения</string>
    <string name="title_menu_notes">Ноты</string>
    <string name="title_news">Новости</string>
    <string name="media">Медиа</string>
    <string name="offerings">Пожертвование</string>
    <string name="about_us">О Нас</string>
    <string name="live_page">Эфиры</string>
    <string name="calendar_page">Календарь</string>
    <string name="json">
    </string>
</resources>
