<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_page"
            android:icon="@drawable/news"
            android:title="@string/title_news" />
        <item
            android:id="@+id/blogs"
            android:icon="@drawable/blog"
            android:title="@string/action_blogs" />
        <item
            android:id="@+id/notes_menu"
            android:icon="@drawable/notes"
            android:title="@string/title_menu_notes" />
        <item
            android:id="@+id/media"
            android:icon="@drawable/media"
            android:title="@string/media" />
        <item
            android:id="@+id/live_page"
            android:icon="@drawable/tv"
            android:title="@string/live_page" />
        <item
            android:id="@+id/calendar_page"
            android:icon="@drawable/calendar"
            android:title="@string/calendar_page" />
    </group>

    <item android:title="Сообщаться">

        <menu>
            <group android:checkableBehavior="single">

            <item
                android:id="@+id/offerings"
                android:icon="@drawable/offerings"
                android:title="@string/offerings" />
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/about_us"
                android:title="@string/about_us" />
            </group>
        </menu>

    </item>

</menu>
